--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="https://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="https://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768186.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/12/32069c8c4434c9aa16dd970e38fb4200-320x200.jpg">【新闻看点】台湾大选谁赢 北京都遇难题</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768225.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/VCG111262611086-600x400-320x200.jpg">阴霾袭华北黄淮汾渭 69城发重污染预警</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764607.md#1">“中国淡水鱼之王”长江白鲟被宣告灭绝</a><br>
@@ -32,7 +32,8 @@
 </td><td VALIGN=TOP width="352">
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768297.md#1">武汉爆不明病毒性肺炎 全球戒备</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768207.md#1">新加坡现首例武汉肺炎 港府提升应对级别</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768225.md#1">阴霾袭华北黄淮汾渭 69城发重污染预警</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768186.md#1">【新闻看点】台湾大选谁赢 北京都遇难题</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751194.md#1">【2019盘点】响彻世界政坛的正义之声</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768074.md#1">周晓辉：更换中联办主任 中南海仍避重就轻</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768058.md#1">习近平谈中共领导人更替 接班人制再引关注</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768022.md#1">港中联办主任遭撤换 新任骆惠宁有三大特点</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766968.md#1">武汉不明肺炎 专家：疫情越封锁越难防疫</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766999.md#1">中共警察强制中小学男生抽血 建DNA数据库</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767498.md#1">武汉肺炎疫情蔓延 香港专家：恐已人传人</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767049.md#1">伊朗二号人物索莱玛尼被击毙 他是什么人？</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768055.md#1">川普击毙伊朗二号人物 对中共释何种信号</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768112.md#1">担心国安风险 美五大军种全面禁用抖音</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768034.md#1">美摄影教授被拒入境香港 曾拍摄抗议照片</a><br>
@@ -49,13 +49,13 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767938.md#1">广西南宁一幼儿园老师虐童</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767073.md#1">2019年前11个月 大陆车市产销量同比下降</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767110.md#1">程晓容：长江白鲟灭绝 中共乃危机源头</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767049.md#1">伊朗二号人物索莱玛尼被击毙 他是什么人？</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767423.md#1">大批明星搭机资料遭国航员工泄露</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760693.md#1">蒋经国一生反共信念的历程</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767304.md#1">赵正永的大管家 陕西前副省长陈国强被双开</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767045.md#1">陕西前书记赵正永被审查 通报措辞极严厉</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767063.md#1">袁斌：2019年以悲剧落幕，2020年以惨剧揭幕</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766814.md#1">楼市趋冷 北京760万元二手房两月降170万</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751194.md#1">【2019盘点】响彻世界政坛的正义之声</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766872.md#1">武汉肺炎疫情扩大 大陆多地又爆发流感</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766842.md#1">新年伊始茅台连跌两日 市值蒸发1300亿</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766821.md#1">美伊冲突 专家：北京陷内困无瑕顾及伊朗</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,244,513 人
+- 共 349,244,672 人
 ```
 </strong>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
